Fixed handling of empty line after a bullet in QuirksMode. b=75963 r=karnaze@netscape.com sr=waterson@netscape.com a=brendan